Fixed FindBugs recommendation: use Integer.valueOf(n) instead of new Integer(n)